syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "SceneEntityInfo.proto";
import "AbilityControlBlock.proto";
import "SceneAvatarInfo.proto";
import "AvatarInfo.proto";
import "AbilitySyncStateInfo.proto";
import "ServerBuff.proto";


message SceneTeamAvatar {
	uint64 weapon_guid = 12;
	uint64 avatar_guid = 6;
	bool is_player_cur_avatar = 2;
	bool is_on_scene = 371;
	bool is_reconnect = 8;
	uint32 weapon_entity_id = 5;
	uint32 player_uid = 3;
	uint32 scene_id = 1;
	uint32 entity_id = 13;
	AbilityControlBlock ability_control_block = 14;
	AvatarInfo avatar_info = 15;
	AbilitySyncStateInfo avatar_ability_info = 4;
	AbilitySyncStateInfo weapon_ability_info = 10;
	SceneAvatarInfo scene_avatar_info = 7;
	SceneEntityInfo scene_entity_info = 11;
	repeated ServerBuff server_buff_list = 9;
}