syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message WearEquipReq {
	uint64 equip_guid = 5;
	uint64 avatar_guid = 15;
}