syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message WearEquipRsp {
	uint64 equip_guid = 7;
	uint64 avatar_guid = 9;
	int32 retcode = 12;
}